objects/CIP_History_COB__c.object
<CustomObject>
    <fields>
        <fullName>Anthem_Month_to_Solicit_COB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Month to Solicit COB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History COB</relationshipLabel>
        <relationshipName>CIP_History_COB</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>COB_Method_Apply_to_all__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COB Method Apply to all Packages/Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_or_Suffix_for_Annual_COB_Solicit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case or Suffix for Annual COB Solicit</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Medicare_Part_D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Medicare Part D Rx to:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_COB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Medicare__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments Medicare</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coordination_of_Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coordination of Benefits</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_this_Apply__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does this Apply to All Subgroups?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_your_Me_Too_selection_apply_to_all__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does Me Too selection apply to all pkgs?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Medicare_Crossover__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclude from Medicare Crossover</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_please_specify_per_package_which_M__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If no, specify ME Too per package</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Me_Too_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Me Too Indicator</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Applies_to_Packages_Suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If No, please explain:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medicare_COB_Options__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare COB Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_COB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare COB</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Option D</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Option_E__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Option E</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packages_Suffixes_COB_Method_Applies__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If no, specify COB method per package</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pay_and_Pursue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pay and Pursue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pursue_and_Pay__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pursue and Pay</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Medicare__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Will Medicare Part D Benefits be Offered</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>CIP History COB</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History COB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History COB</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>